--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Villa Itue - Asistente de Autoservicio</title>
+    <title>Villa Itue - Asistente Virtual</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -12,45 +12,52 @@
             min-height: 100vh;
             display: flex;
             flex-direction: column;
-            background-color: #0f172a; /* Fondo oscuro de seguridad */
+            background-color: #0f172a;
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
             transition: background-image 2s ease-in-out;
             color: white;
-            font-family: sans-serif;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         }
-        .mic-active { animation: pulse 1.5s infinite; background-color: #ef4444 !important; }
+        .mic-active { 
+            animation: pulse 1.5s infinite; 
+            background-color: #ef4444 !important; 
+        }
         @keyframes pulse {
             0% { box-shadow: 0 0 0 0 rgba(239, 68, 68, 0.7); }
             70% { box-shadow: 0 0 0 15px rgba(239, 68, 68, 0); }
             100% { box-shadow: 0 0 0 0 rgba(239, 68, 68, 0); }
         }
         .scrollbar-hide::-webkit-scrollbar { display: none; }
+        .glass { background: rgba(15, 23, 42, 0.85); backdrop-filter: blur(12px); }
     </style>
 </head>
 <body>
 
-    <nav class="bg-slate-900/90 border-b border-slate-800 p-4 flex items-center justify-between shadow-2xl sticky top-0 z-50 backdrop-blur-md">
+    <nav class="glass border-b border-white/10 p-4 flex items-center justify-between shadow-2xl sticky top-0 z-50">
         <div class="flex items-center gap-3">
             <div id="status-led" class="w-3 h-3 rounded-full bg-green-500 shadow-[0_0_10px_rgba(34,197,94,0.5)]"></div>
-            <span class="font-bold tracking-tight text-xl text-white">VILLA <span class="text-blue-500">ITUE</span></span>
+            <span class="font-bold tracking-tighter text-2xl text-white">VILLA <span class="text-blue-500">ITUE</span></span>
         </div>
         <div class="flex items-center gap-4">
-            <span id="transcription" class="hidden md:block text-slate-400 italic text-sm max-w-xs truncate">Listo para escuchar...</span>
-            <button id="btn-micro" class="bg-blue-600 p-4 rounded-full hover:bg-blue-500 transition-all shadow-lg text-white">
-                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <span id="transcription" class="hidden md:block text-slate-400 italic text-sm max-w-xs truncate font-medium">Listo para ayudarle...</span>
+            <button id="btn-micro" class="bg-blue-600 p-4 rounded-full hover:bg-blue-500 transition-all shadow-lg text-white transform active:scale-95">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-7 w-7" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11a7 7 0 01-7 7m0 0a7 7 0 01-7-7m7 7v4m0 0H8m4 0h4m-4-20a3 3 0 00-3 3v8a3 3 0 006 0V5a3 3 0 00-3-3z" />
                 </svg>
             </button>
         </div>
     </nav>
 
-    <main id="viewer" class="flex-grow flex items-center justify-center p-6 text-center">
-        <div id="placeholder" class="animate-pulse">
-            <h2 class="text-4xl font-light text-slate-300">Bienvenido a Villa Itue</h2>
-            <p class="text-slate-400 mt-2 italic text-lg">Presione el micrófono para hablar con Don Atilio</p>
+    <main id="viewer" class="flex-grow flex items-center justify-center p-6">
+        <div id="placeholder" class="text-center space-y-4">
+            <div class="w-24 h-24 bg-blue-500/20 rounded-full flex items-center justify-center mx-auto mb-6 border border-blue-500/30">
+                <svg class="w-12 h-12 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
+            </div>
+            <h2 class="text-4xl font-black text-white tracking-tight">Bienvenido a Villa Itue</h2>
+            <p class="text-slate-300 text-xl font-light">Presione el micrófono para conversar con Don Atilio</p>
         </div>
     </main>
 
@@ -61,7 +68,7 @@
         const btn = document.getElementById('btn-micro');
         const led = document.getElementById('status-led');
 
-        // --- 1. FONDO DINÁMICO (PORTAL) ---
+        // --- 1. CONFIGURACIÓN DE FONDO (PORTAL) ---
         const fotosPortal = [
             'https://vsn47925-tech.github.io/img/servicio/portal-entrada.jpg',
             'https://vsn47925-tech.github.io/img/servicio/portal-recep.jpg',
@@ -70,31 +77,30 @@
         ];
         let currentPortal = 0;
 
-        function aplicarFondo(url) {
+        function rotarFondo() {
+            const url = fotosPortal[currentPortal];
             document.body.style.backgroundImage = `linear-gradient(rgba(15, 23, 42, 0.75), rgba(15, 23, 42, 0.75)), url('${url}')`;
+            currentPortal = (currentPortal + 1) % fotosPortal.length;
         }
 
-        // Iniciar fondo inmediatamente
-        aplicarFondo(fotosPortal[0]);
-        setInterval(() => {
-            currentPortal = (currentPortal + 1) % fotosPortal.length;
-            aplicarFondo(fotosPortal[currentPortal]);
-        }, 10000);
+        // Iniciar rotación
+        rotarFondo();
+        setInterval(rotarFondo, 10000);
 
-        // --- 2. VOZ CHILENA ---
-        const hablarDonAtilio = (texto) => {
+        // --- 2. VOZ (VELOCIDAD NORMAL) ---
+        const hablar = (texto) => {
             window.speechSynthesis.cancel();
             const utterance = new SpeechSynthesisUtterance(texto);
             const voces = window.speechSynthesis.getVoices();
-            const vozChilena = voces.find(v => v.lang === 'es-CL') || voces.find(v => v.lang.includes('es'));
+            const voz = voces.find(v => v.lang === 'es-CL') || voces.find(v => v.lang.includes('es'));
             
-            utterance.voice = vozChilena;
-            utterance.pitch = 0.75;
-            utterance.rate = 0.8;
+            utterance.voice = voz;
+            utterance.pitch = 1.0;
+            utterance.rate = 1.0; // Velocidad normalizada
             window.speechSynthesis.speak(utterance);
         };
 
-        // --- 3. RECONOCIMIENTO DE VOZ ---
+        // --- 3. RECONOCIMIENTO Y LÓGICA ---
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
         recognition.lang = 'es-CL';
 
@@ -123,34 +129,35 @@
                 const rawData = await response.json();
                 let data = Array.isArray(rawData) ? rawData[0] : rawData;
 
-                // Desempaquetar JSON si viene como texto
+                // Limpieza profunda de JSON anidado
                 if (typeof data.output === 'string' && data.output.includes('{')) {
                     data = JSON.parse(data.output);
                 }
 
-                hablarDonAtilio(data.output);
-                viewer.innerHTML = renderizarCarrusel(data);
+                hablar(data.output || data.text);
+                viewer.innerHTML = renderizar(data);
 
             } catch (error) {
-                console.error("Error:", error);
+                console.error("Error n8n:", error);
+                textDisplay.innerText = "Error de conexión";
             }
         };
 
-        const renderizarCarrusel = (data) => {
+        const renderizar = (data) => {
             if (!data.imagenes || data.imagenes.length === 0) {
-                return `<div class="bg-slate-900/80 p-6 rounded-2xl border border-white/10 text-xl max-w-lg">${data.output}</div>`;
+                return `<div class="glass p-8 rounded-[2rem] border border-white/10 text-2xl text-white max-w-lg shadow-2xl animate-in fade-in zoom-in duration-500">${data.output}</div>`;
             }
             return `
-            <div class="flex flex-col gap-4 animate-in zoom-in duration-500 max-w-md w-full">
-                <div class="relative overflow-hidden rounded-[2rem] shadow-2xl border-4 border-white/10 bg-slate-900 aspect-video">
+            <div class="flex flex-col gap-6 animate-in slide-in-from-bottom-10 duration-700 max-w-md w-full">
+                <div class="relative overflow-hidden rounded-[2.5rem] shadow-2xl border-4 border-white/10 bg-slate-900 aspect-video">
                     <div class="flex overflow-x-auto snap-x snap-mandatory scrollbar-hide h-full">
                         ${data.imagenes.map(img => `<div class="snap-center shrink-0 w-full h-full"><img src="${img}" class="w-full h-full object-cover"></div>`).join('')}
                     </div>
                 </div>
-                <div class="bg-slate-900/90 backdrop-blur-md p-6 rounded-[2rem] border border-white/10 text-left">
-                    <h3 class="text-xl font-bold text-blue-400">${data.titulo || 'Villa Itue'}</h3>
-                    <p class="text-slate-200 text-sm mt-2">${data.descripcion || ''}</p>
-                    <p class="text-lg font-bold text-white mt-3">${data.precio || ''}</p>
+                <div class="glass p-8 rounded-[2.5rem] border border-white/10 text-left shadow-2xl">
+                    <h3 class="text-3xl font-black text-blue-400 mb-2">${data.titulo || 'Villa Itue'}</h3>
+                    <p class="text-slate-200 text-lg leading-relaxed">${data.descripcion || ''}</p>
+                    ${data.precio ? `<p class="text-2xl font-black text-white mt-4 pt-4 border-t border-white/5">${data.precio}</p>` : ''}
                 </div>
             </div>`;
         };
