--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <nav class="glass border-b border-white/10 p-4 flex items-center justify-between shadow-2xl sticky top-0 z-50">
         <div class="flex items-center gap-3">
             <div id="status-led" class="w-3 h-3 rounded-full bg-green-500 shadow-[0_0_10px_rgba(34,197,94,0.5)]"></div>
-            <span class="font-bold tracking-tighter text-2xl text-white">VILLA <span class="text-blue-500">ITUE</span></span>
+            <span class="font-bold tracking-tighter text-2xl text-white">VILLAITUE</span></span>
         </div>
         <div class="flex items-center gap-4">
             <span id="transcription" class="hidden md:block text-slate-400 italic text-sm max-w-xs truncate font-medium">Listo para ayudarle...</span>
@@ -57,7 +57,7 @@
                 <svg class="w-12 h-12 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
             </div>
             <h2 class="text-4xl font-black text-white tracking-tight">Bienvenido a Villa Itue</h2>
-            <p class="text-slate-300 text-xl font-light">Presione el micrófono para conversar con Don Atilio</p>
+            <p class="text-slate-300 text-xl font-light">Presione el micrófono para conversar con el asisten de cabañas villaitue</p>
         </div>
     </main>
 
