Update welcome message in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
             <div class="w-24 h-24 bg-blue-500/20 rounded-full flex items-center justify-center mx-auto mb-6 border border-blue-500/30">
                 <svg class="w-12 h-12 text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
             </div>
-            <h2 class="text-4xl font-black text-white tracking-tight">Bienvenido a Villa Itue</h2>
+            <h2 class="text-4xl font-black text-white tracking-tight">Bienvenido a Cabañas Villaitue</h2>
             <p class="text-slate-300 text-xl font-light">Presione el micrófono para conversar con el asistente de cabañas villaitue</p>
         </div>
     </main>
