--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Villa Itue - Autoservicio PWA</title>
+    <title>Villaitue - Autoservicio</title>
     
     <link rel="manifest" href="manifest.json">
     <meta name="theme-color" content="#0f172a">
@@ -60,7 +60,7 @@
     <nav class="glass sticky top-0 z-50 p-4 flex items-center justify-between shadow-xl">
         <div class="flex items-center gap-3">
             <div id="status-led" class="w-3 h-3 rounded-full bg-green-500 shadow-[0_0_8px_rgba(34,197,94,0.6)]"></div>
-            <span class="font-black text-2xl tracking-tighter italic">VILLA <span class="text-blue-500">ITUE</span></span>
+            <span class="font-black text-2xl tracking-tighter italic">VILLAITUE</span></span>
         </div>
         <div class="flex items-center gap-4">
             <span id="transcription" class="hidden md:block text-slate-400 italic text-sm max-w-xs truncate">Esperando instrucción...</span>
@@ -73,12 +73,12 @@
     <main id="viewer" class="flex-grow flex items-center justify-center p-6">
         <div id="welcome-msg" class="text-center fade-in">
             <h1 class="text-5xl font-black mb-4">¡Hola!</h1>
-            <p class="text-slate-300 text-xl">Presione el botón rojo para hablar con Don Atilio.</p>
+            <p class="text-slate-300 text-xl">Presione el botón rojo para hablar con el asistente de Cabañas Villaitue</p>
         </div>
     </main>
 
     <script>
-        const N8N_URL = 'https://apps.villaitue.cl/webhook-test/autoservicio';
+        const N8N_URL = 'https://apps.villaitue.cl/webhook/autoservicio';
         const viewer = document.getElementById('viewer');
         const textDisplay = document.getElementById('transcription');
         const btn = document.getElementById('btn-micro');
