--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </main>
 
     <script>
-        const N8N_URL = 'https://apps.villaitue.cl/webhook/autoservicio';
+        const N8N_URL = 'https://apps.villaitue.cl/webhook-test/autoservicio';
         const viewer = document.getElementById('viewer');
         const textDisplay = document.getElementById('transcription');
         const btn = document.getElementById('btn-micro');
