--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Villa Itue - Autoservicio</title>
+    <title>Villaitue - Autoservicio</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         :root { --glass: rgba(15, 23, 42, 0.85); --border: rgba(255, 255, 255, 0.15); }
@@ -50,7 +50,7 @@
     <nav class="glass sticky top-0 z-50 p-4 flex items-center justify-between">
         <div class="flex items-center gap-3">
             <div id="status-led" class="w-3 h-3 rounded-full bg-green-500 shadow-[0_0_10px_rgba(34,197,94,0.5)]"></div>
-            <span class="font-bold text-2xl tracking-tighter">VILLA <span class="text-blue-500">ITUE</span></span>
+            <span class="font-bold text-2xl tracking-tighter">VILLAITUE</span></span>
         </div>
         <div class="flex items-center gap-4">
             <span id="transcription" class="hidden md:block text-slate-400 italic text-sm italic">Listo para escuchar...</span>
@@ -63,7 +63,7 @@
     <main id="viewer" class="flex-grow flex items-center justify-center p-6">
         <div id="welcome" class="text-center space-y-4">
             <h2 class="text-4xl font-black italic">Bienvenido</h2>
-            <p class="text-slate-300">Presione el micrófono para hablar con Don Atilio</p>
+            <p class="text-slate-300">Presione el micrófono para hablar con el Asistente de Cabañas Villaitue</p>
         </div>
     </main>
 
