Change speech recognition language from 'es-ES' to 'es-CL'

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         // RECONOCIMIENTO
         const recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
-        recognition.lang = 'es-ES';
+        recognition.lang = 'es-CL';
 
         window.hablar = () => { try { recognition.start(); } catch(e) {} };
         btn.onclick = window.hablar;
