Update title and N8N URL in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cabañas Villaitue - Villarrica</title>
+    <title>Cabañas Villarrica</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         body {
@@ -62,7 +62,7 @@
     </main>
 
     <script>
-        const N8N_URL = 'https://apps.villaitue.cl/webhook/autoservicio';
+        const N8N_URL = 'https://apps.villaitue.cl/webhook-test/autoservicio';
         const viewer = document.getElementById('viewer');
         const textDisplay = document.getElementById('transcription');
         const btn = document.getElementById('btn-micro');
