--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Villa Itue - Asistente por Voz</title>
+    <title>Villaitue</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         .mic-active { animation: pulse 1.5s infinite; background-color: #ef4444 !important; }
