--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <span id="statusText" class="text-gray-700 font-medium">Sistema de voz iniciado</span>
                     </div>
                     <p id="endpointInfo" class="text-sm text-gray-500 mt-1">
-                        Endpoint: <span class="font-mono text-blue-600">https://apps.villaitue.cl/webhook-test/autoservicio</span>
+                        Endpoint: <span class="font-mono text-blue-600">https://apps.villaitue.cl/webhook/autoservicio</span>
                     </p>
                     <p id="voicesInfo" class="text-sm text-gray-500">Voces cargadas: <span id="voicesCount" class="font-semibold">19</span></p>
                 </div>
