--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <header class="text-center mb-12">
             <h1 class="text-4xl font-bold text-gray-800 mb-2">
                 <i class="fas fa-microphone text-blue-600 mr-3"></i>
-                Villa Itue - Sistema de Voz
+                Sistema autoservicio de Cabañas Villaitue
             </h1>
             <p class="text-gray-600">Sistema de reservas por voz interactivo</p>
         </header>
