--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
             console.log("Enviando a n8n... Pregunta:", pregunta);
             updateStatus("Procesando...", "bg-blue-500");
             
-            const endpoint = "https://apps.villaitue.cl/webhook-test/autoservicio";
+            const endpoint = "https://apps.villaitue.cl/webhook/autoservicio";
             
             try {
                 const response = await fetch(endpoint, {
