--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
         <h1 class="text-5xl md:text-7xl font-bold text-white mb-6">
             Bienvenido a Cabañas Villaitue
         </h1>
-        <h2 class="text-3xl md:text-7xl font-bold text-white mb-6">
-            Tú Refugio en el Sur
+       <h2 class="text-2xl md:text-7xl font-normal italic text-white mb-6">
+        Tu Refugio en el Sur
         </h2>
         <p class="text-xl md:text-2xl text-white mb-10 opacity-90 max-w-2xl">
             Sistema de Consultas y Reservas interactivas por voz 
