--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <script>
         // CONFIGURACIÓN: Reemplaza con tu URL de webhook de n8n
-        const N8N_WEBHOOK_URL = "https://tu-n8n.dominio/webhook/cabanas-kiosco";
+        const N8N_WEBHOOK_URL = "https://apps.villaitue.cl/webhook/autoservicio";
 
         let mediaRecorder;
         let audioChunks = [];
