--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         <!-- ✅ LOGO NEGRO CENTRADO EN LA PARTE SUPERIOR -->
         <div class="welcome-logo-container">
             <img 
-                src="https://vsn47925-tech.github.io/img/logo_nergro.png" 
+                src="https://vsn47925-tech.github.io/img/logo_blanco.png" 
                 alt="Logo de Cabañas Villaitue" 
                 class="welcome-logo"
                 loading="eager"
