--- a/index.html
+++ b/index.html
@@ -399,8 +399,8 @@
             />
         </div>
         
-        <h1 class="text-4xl md:text-6xl font-bold mb-4 mt-24">Bienvenido a Cabañas Villaitue</h1>
-        <h2 class="text-xl md:text-3xl font-normal italic mb-6">Tu Refugio en el Sur</h2>
+       `<h1 class="text-4xl md:text-6xl font-bold mb-4 mt-24">Bienvenido a Cabañas Villaitue</h1>`
+        `<h2 class="text-xl md:text-3xl font-normal italic mb-6">Tu Refugio en el Sur</h2>`
         <p class="text-lg md:text-xl mb-8 max-w-2xl">
             Sistema de Consultas y Reservas interactivas por voz. 
             <span class="sr-only">Presione el botón del micrófono para comenzar.</span>
