--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
         <!-- ✅ LOGO NEGRO CENTRADO Y AUMENTADO EN 40% -->
         <div class="welcome-logo-container">
             <img 
-                src="https://vsn47925-tech.github.io/img/logo_nergro.png" 
+                src="https://vsn47925-tech.github.io/img/logo_blanco.png" 
                 alt="Logo de Cabañas Villaitue" 
                 class="welcome-logo"
                 loading="eager"
@@ -401,10 +401,8 @@
         </div>
         
         <!-- ✅ TÍTULOS SIN MÁRGENES EXCESIVOS Y TOTALMENTE CENTRADOS -->
-        <h1 class="text-4xl md:text-6xl font-bold">Bienvenido a Cabañas Villaitue</h1>
-        <h2 class="text-xl md:text-3xl font-normal italic mt-2">Tu Refugio en el Sur</h2>
         <p class="text-lg md:text-xl mt-6 mb-8 max-w-2xl">
-            Sistema de Consultas y Reservas interactivas por voz. 
+            Sistema Autoconsultas por voz. 
             <span class="sr-only">Presione el botón del micrófono para comenzar.</span>
         </p>
         
