--- a/404.html
+++ b/404.html
@@ -38,7 +38,7 @@
 </head>
 <body>
 
-    <img src="cuatro04.webp" alt="Error 404 - Página no encontrada">
+    <img src="cuatro.webp" alt="Error 404 - Página no encontrada">
 
     <h1>¡Ups! Te has perdido.</h1>
     <p>La página que buscas no existe o ha sido movida.</p>
