--- a/404.html
+++ b/404.html
@@ -3,48 +3,76 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página no encontrada - 404</title>
+    <title>404 - No Encontrado</title>
     <style>
-        body {
+        * {
             margin: 0;
             padding: 0;
+            box-sizing: border-box;
+        }
+
+        body, html {
+            height: 100%;
+            overflow: hidden; /* Evita que aparezcan barras de scroll */
+            font-family: sans-serif;
+        }
+
+        .background-container {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -1; /* Pone la imagen detrás de todo */
+        }
+
+        img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* Clave: llena la pantalla sin estirarse feo */
+            object-position: center;
+        }
+
+        .content {
+            position: relative;
+            z-index: 1;
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            height: 100vh;
-            text-align: center;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #f9f9f9;
+            height: 100%;
+            color: white;
+            text-shadow: 0 2px 10px rgba(0,0,0,0.7); /* Para que el texto se lea sobre la imagen */
+            background: rgba(0, 0, 0, 0.3); /* Capa oscura opcional para mejorar legibilidad */
         }
-        img {
-            max-width: 80%;
-            height: auto;
-            border-radius: 15px; /* Bordes redondeados opcionales */
-            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
-        }
-        h1 { color: #333; margin-top: 20px; }
+
         .btn {
             margin-top: 20px;
+            padding: 12px 25px;
+            background-color: #ffffff;
+            color: #333;
             text-decoration: none;
-            color: white;
-            background-color: #007bff;
-            padding: 12px 24px;
-            border-radius: 30px;
-            transition: background 0.3s;
+            border-radius: 50px;
+            font-weight: bold;
+            transition: transform 0.2s;
         }
-        .btn:hover { background-color: #0056b3; }
+
+        .btn:hover {
+            transform: scale(1.1);
+        }
     </style>
 </head>
 <body>
 
-    <img src="cuatro.webp" alt="Error 404 - Página no encontrada">
+    <div class="background-container">
+        <img src="cuatro.webp" alt="404 Animation">
+    </div>
 
-    <h1>¡Ups! Te has perdido.</h1>
-    <p>La página que buscas no existe o ha sido movida.</p>
-    
-    <br>
-    <a href="/" class="btn">Volver al inicio</a>
+    <div class="content">
+        <h1>¡UPS! TE HAS PERDIDO</h1>
+        <p>La página que buscas no está aquí.</p>
+        <a href="/" class="btn">Volver al Inicio</a>
+    </div>
 
 </body>
 </html>
